syntax = "proto3";

option go_package = "github.com/webitel/chat_manager/api/proto/storage";

package storage;

// import "google/api/annotations.proto";

service FileService {
    rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse) {}
    rpc UploadFileUrl (UploadFileUrlRequest) returns (UploadFileUrlResponse) {}
}

enum UploadStatusCode {
    Unknown = 0;
    Ok = 1;
    Failed = 2;
}

message UploadFileUrlRequest {
    int64 domain_id = 1;
    string uuid = 2;
    string name = 3;
    string url = 4;
    string mime = 5;
}

message UploadFileUrlResponse {
    int64 id = 1;
    string url = 2;
    string mime = 4;
    int64 size = 5;
    UploadStatusCode code = 6;
}

message UploadFileRequest {

    message Metadata {
        int64 domain_id = 1;
        string name = 2;
        string mime_type = 3;
        string uuid = 4;
    }

    oneof data {
        Metadata metadata = 1;
        bytes chunk = 2;
    };

}

message UploadFileResponse {
    int64 file_id = 1;
    string file_url = 2;
    int64 size = 3;
    UploadStatusCode code = 4;
}